# rust-db-copier

./: Cargo.toml  README.md  example.config.toml
src/: config.rs  error.rs  logger.rs  main.rs  traits.rs
src/mysql_processor/: data_migrator.rs  db.rs  migrator.rs  mod.rs  structure_migrator.rs
src/psql_processor/: data_migrator.rs  db.rs  migrator.rs  mod.rs  pg_dump_migrator.rs  structure_migrator.rs  table_migrator.rs
