[package]
name = "db_copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.68"
mysql = "24.0.0"
sqlx = { version ="0.7.2", features=[ "runtime-tokio-rustls", "postgres", "chrono" ] }
regex = "1.5"
clap = { version = "4.5.1", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }